corrected typo in search page

--- a/help/C/search.page
+++ b/help/C/search.page
@@ -33,7 +33,7 @@
       <key>Return</key> to search.</p>
     </item>
     <item>
-      <p>You can also search for notes from the <gui>Activies</gui> view.</p>
+      <p>You can also search for notes from the <gui>Activities</gui> view.</p>
     </item>
   </list>
 
